<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="txtview_nano_txt">My Nanodegree Apps!</string>
    <string name="btn_spot_text">SPOTIFY STREAMER</string>
    <string name="btn_scores_txt">SCORES APP</string>
    <string name="btn_lib_text">LIBRARY APP</string>
    <string name="btn_build_text">BUILD IT BIGGER</string>
    <string name="btn_xyz_text">XYZ READER</string>
    <string name="btn_caps_text">CAPSTONE: MY OWN APP</string>

    <string-array name="btn_toast">
        <item>This button will launch my spotify streamer app</item>
        <item>This button will launch my scores app</item>
        <item>This button will launch my library app</item>
        <item>This button will launch my build it bigger app</item>
        <item>This button will launch my xyz reader app</item>
        <item>This button will launch my capstone app</item>
    </string-array>
</resources>
