<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.acr.myappportfolio.MainActivity"
    style="@style/AlertDialog.AppCompat"
    android:background="#d5eaf2"
    tools:showIn="@layout/activity_main">

    <TextView
        android:text="@string/txtview_nano_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="27sp"
        android:textAlignment="center"
        android:textIsSelectable="false"
        android:textColor="#181414" />
    <Button
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:id="@+id/btn_spot"
        android:text="@string/btn_spot_text"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:background="#e4f78a37"/>

    <Button
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:id="@+id/btn_score"
        android:layout_below="@+id/btn_spot"
        android:layout_alignLeft="@+id/btn_spot"
        android:layout_alignStart="@+id/btn_spot"
        android:text="@string/btn_scores_txt"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:background="#e4f78a37"
        android:layout_marginTop="10dp" />

    <Button
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:id="@+id/btn_lib"
        android:layout_below="@+id/btn_score"
        android:layout_alignLeft="@+id/btn_score"
        android:layout_alignStart="@+id/btn_score"
        android:text="@string/btn_lib_text"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:background="#e4f78a37"
        android:layout_marginTop="10dp" />

    <Button
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:id="@+id/btn_build"
        android:layout_below="@+id/btn_lib"
        android:layout_centerHorizontal="true"
        android:text="@string/btn_build_text"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:background="#e4f78a37"
        android:layout_marginTop="10dp" />

    <Button
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:id="@+id/btn_xyz"
        android:layout_below="@+id/btn_build"
        android:layout_alignLeft="@+id/btn_build"
        android:layout_alignStart="@+id/btn_build"
        android:text="@string/btn_xyz_text"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:background="#e4f78a37"
        android:layout_marginTop="10dp" />

    <Button
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:id="@+id/btn_caps"
        android:text="@string/btn_caps_text"
        android:layout_below="@+id/btn_xyz"
        android:layout_alignLeft="@+id/btn_xyz"
        android:layout_alignStart="@+id/btn_xyz"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:background="#e4f78a37"
        android:layout_marginTop="10dp" />

</RelativeLayout>